workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoContrato__c/BeneficiarioSeguradoContrato__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar os beneficiários do contrato</description>
    <label>Beneficiário do segurado do contrato</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beneficiários dos segurados do contrato</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>