workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoContrato__c/fields/BeneficiarioGrauParentescoOutros__c.field-meta.xml
<CustomField>
    <fullName>BeneficiarioGrauParentescoOutros__c</fullName>
    <label>Outros</label>
    <length>255</length>
    <type>Text</type>
</CustomField>