workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoContrato__c/fields/Carga_DataStage__c.field-meta.xml
<CustomField>
    <fullName>Carga_DataStage__c</fullName>
    <label>Carga DataStage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>