workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoContrato__c/fields/CpfCnpj__c.field-meta.xml
<CustomField>
    <fullName>CpfCnpj__c</fullName>
    <label>CPF / CNPJ</label>
    <length>25</length>
    <type>Text</type>
</CustomField>