workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoContrato__c/fields/Data_de_Nascimento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Nascimento__c</fullName>
    <label>Data de Nascimento</label>
    <type>Date</type>
</CustomField>