workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoContrato__c/fields/GrauParentesco__c.field-meta.xml
<CustomField>
    <fullName>GrauParentesco__c</fullName>
    <label>Grau de parentesco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grau_Parentesco</valueSetName>
    </valueSet>
</CustomField>