workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoContrato__c/fields/GrauParentescoPep__c.field-meta.xml
<CustomField>
    <fullName>GrauParentescoPep__c</fullName>
    <label>Grau de parentesco da PEP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amigo (a)</fullName>
            </value>
            <value>
                <fullName>Avó</fullName>
            </value>
            <value>
                <fullName>Avô</fullName>
            </value>
            <value>
                <fullName>Companheiro (a)</fullName>
            </value>
            <value>
                <fullName>Cônjuge</fullName>
            </value>
            <value>
                <fullName>Cunhado (a)</fullName>
            </value>
            <value>
                <fullName>Enteado (a)</fullName>
            </value>
            <value>
                <fullName>Filho (a)</fullName>
            </value>
            <value>
                <fullName>Irmão (ã)</fullName>
            </value>
            <value>
                <fullName>Mãe</fullName>
            </value>
            <value>
                <fullName>Namorado (a)</fullName>
            </value>
            <value>
                <fullName>Neto (a)</fullName>
            </value>
            <value>
                <fullName>Noivo (a)</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Pai</fullName>
            </value>
            <value>
                <fullName>Primo (a)</fullName>
            </value>
            <value>
                <fullName>Sobrinho (a)</fullName>
            </value>
            <value>
                <fullName>Sócio (a)</fullName>
            </value>
            <value>
                <fullName>Tio (a)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>