workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoContrato__c/fields/MotivoSemCpfCnpj__c.field-meta.xml
<CustomField>
    <fullName>MotivoSemCpfCnpj__c</fullName>
    <label>Motivo sem CPF / CNPJ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estrangeiro com visto temporário</fullName>
            </value>
            <value>
                <fullName>Não desejo informar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>