workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoContrato__c/fields/NomePessoaPep__c.field-meta.xml
<CustomField>
    <fullName>NomePessoaPep__c</fullName>
    <label>Nome da pessoa PEP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>