workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoContrato__c/fields/NomeSocial__c.field-meta.xml
<CustomField>
    <fullName>NomeSocial__c</fullName>
    <description>esignação pela qual a pessoa travesti ou transexual se identifica e é socialmente reconhecida</description>
    <label>Nome Social</label>
    <length>50</length>
    <type>Text</type>
</CustomField>