workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoContrato__c/fields/Participacao__c.field-meta.xml
<CustomField>
    <fullName>Participacao__c</fullName>
    <label>Participação</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>