workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoContrato__c/fields/SeguradoContrato__c.field-meta.xml
<CustomField>
    <fullName>SeguradoContrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Segurado do contrato</label>
    <referenceTo>SeguradoContrato__c</referenceTo>
    <relationshipLabel>Beneficiários dos segurados do contrato</relationshipLabel>
    <relationshipName>Benefici_rios_dos_segurados_do_contrato</relationshipName>
    <type>Lookup</type>
</CustomField>